시도 구군 선택 값 받아서 submit

--- a/src/main/resources/templates/kidsmap.mustache
+++ b/src/main/resources/templates/kidsmap.mustache
@@ -1,13 +1,44 @@
 {{>layout/header}}
-    <br><br>여기에 지도를 띄우고싶음<br><br>
-    <div id="map" style="width:500px;height:400px;"></div>
+    <div class="selectdongnae">
+    <form action="/#">
+    <h3 style="text-align: center;">지역을 선택하세요</h3>
+    <select id="sido" name="sido">
+        <option>시 도를 선택하세요</option>
+        <option value="26">부산시</option>
+    </select>
+    <select id="gungu" name="gungu">
+        <option> 구 군을 선택하세요</option>
+        <option value="44">강서구</option>
+        <option value="41">금정구</option>
+        <option value="71">기장군</option>
+        <option value="29">남구</option>
+        <option value="17">동구</option>
+        <option value="26">동래구</option>
+        <option value="23">부산진구</option>
+        <option value="32">북구</option>
+        <option value="53">사상구</option>
+        <option value="38">사하구</option>
+        <option value="14">서구</option>
+        <option value="50">수영구</option>
+        <option value="47">연제구</option>
+        <option value="20">영도구</option>
+        <option value="11">중구</option>
+        <option value="35">해운대구</option>
+    </select>
+        <input type="submit" value="확인">
+    </form>
+    </div>
+
+    <div class="mapcontainer">
+        <div id="map" style="width: 500px; height: 400px;"></div>
+    </div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=153434e592fa10a5ebecb3d7cfb9cc22"></script>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=APIKEY&libraries=services,clusterer,drawing"></script>
     <script src="/js/Kidsmap.js"></script>
+    <script src="/js/selectdongnae.js"></script>
     <!--메뉴창이 제일 위로 나오게 해야함
         지금 지도가 맨 위에 올라가있음!-->
 
-<br><br><br>
 
 <table class="tabel table-hover">
     <thead>
