--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -7,6 +7,7 @@
     <title>iRang</title>
     <link href="/css/menubar.css" rel="stylesheet" />
     <link href="/css/login.css" rel="stylesheet"/>
+    <link href="/css/kidsmap.css" rel="stylesheet"/>
     
     <!-- 링크걸때 /css 이렇게 안걸면 적용안됨! -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
