지역value받아서 어떻게?

--- a/src/main/resources/templates/kidsmap.mustache
+++ b/src/main/resources/templates/kidsmap.mustache
@@ -3,7 +3,7 @@
     
     <h3 style="text-align: center;">지역을 선택하세요</h3>
     
-    <form>
+    <form action="/result.mustache">
         <select id="sido" name="sido">
         <option value="">시 도를 선택하세요</option>
         
