모달에서 회원가입 localhost거부당함 왜?

--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -18,7 +18,7 @@
     
     <div id="id01" class="modal">
         
-    <form method="post" action="#">
+    <form method="post" action="/join">
         <div class="modal-content animate">
             
             <div class="imgcontainer">
@@ -26,6 +26,9 @@
             </div>
             <div class="container">
                 
+                <label for="name"><b>Name</b></label>
+                <input type="text" placeholder="Enter name" name="name" required>
+
                 <label for="email"><b>Email</b></label>
                 <input type="text" placeholder="Enter Email" name="email" required>
             
