--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -2,7 +2,7 @@
 
 
     <h2 id="logintitle">Login</h2>
-    <form method="post">
+    <form method="post" action="/login">
 
         <div class="container">
             <label for="email"><b>Email</b></label>
@@ -15,6 +15,9 @@
             <button id="signupbtn" onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
         </div>
     </form>
+    {{#error}}
+        <script>alert('로그인 실패')</script>
+    {{/error}}
     
     <div id="id01" class="modal">
         
@@ -40,8 +43,15 @@
                 
                 <button type="submit" class="signupformbtn" id="signupbtn">Sign Up</button>
             </div>
+            <div class="col-md-12">
+                <div class="btn-group btn-group-justified">
+                    <a href="/oauth2/authorization/naver" class="btn btn-success">Naver</a>
+                    <a href="/oauth2/authorization/google" class="btn btn-danger">Google</a>
+                </div>
+            </div>
         </div>
     </form>
     </div>
  <script src="/js/signupmodal.js"></script>
+ <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 {{>layout/footer}}
