--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -28,6 +28,17 @@ input[type=text], input[type=password]{
       text-decoration-line: none;
 }
 
+.btn btn-danger{
+  background-color: rgba(230, 32, 32, 0.829);
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+      text-decoration-line: none;
+}
+
 button:hover{
     opacity: 0.8;
 }
