--- a/src/main/resources/templates/kidsmap.html
+++ b/src/main/resources/templates/kidsmap.html
@@ -2,8 +2,12 @@
 <div class="selectdongnae">
     
     <h3 style="text-align: center;">지역을 선택하세요</h3>
-    
-    <form action="/result.mustache">
+    <form action="/search" method="post">
+        <input type="text" id="juso" name="juso" placeholder="00시 00구">
+    </form>
+    <button type="submit">검색</button>
+<!--    
+    <form action="/search">
         <select id="sido" name="sido">
         <option value="">시 도를 선택하세요</option>
         
@@ -31,7 +35,7 @@
         <input type="submit" value="확인">
     </form>
 </div>
-
+!-->
 
     <div class="mapcontainer">
         <div id="map" style="width: 500px; height: 400px;"></div>
@@ -44,7 +48,7 @@
         지금 지도가 맨 위에 올라가있음!-->
 
 
-<table class="tabel table-hover">
+<!--<table class="tabel table-hover">
     <thead>
         <tr>
             <th>번호</th>
@@ -66,6 +70,6 @@
       </tbody>
 </table>
 
-
+!-->
 
 {{>layout/footer}}
