--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -43,15 +43,35 @@
                 
                 <button type="submit" class="signupformbtn" id="signupbtn">Sign Up</button>
             </div>
+            <div class="form-group form-check">
+                <label for="adminck" class="form-check-input col-sm-2 control-label">Admin</label>
+                    <div class="col-sm-10">
+                        <input class="form-check-input" type="checkbox" name="admin" id="adminck">
+                    </div>
+            </div>
+            <div class="form-group">
+                <label for="adminToken" class="col-sm-2 control-label"></label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="adminToken" placeholder="admin password" name="adminToken" style="display:none">
+                </div>
+            </div>
             <div class="col-md-12">
                 <div class="btn-group btn-group-justified">
-                    <a href="/oauth2/authorization/naver" class="btn btn-success">Naver</a>
-                    <a href="/oauth2/authorization/google" class="btn btn-danger">Google</a>
+                    <a href="/oauth2/authorization/google" class="btn btn-danger">Google 계정으로 로그인</a>
                 </div>
             </div>
         </div>
     </form>
     </div>
+    <script>
+        $(document).ready(function() {
+            $("#adminck").click(function(){
+                var chk = $(this).is(":checked");
+                if(chk) $("#adminToken").show();
+                else $("#adminToken").hide();
+            });
+        });
+    </script>
  <script src="/js/signupmodal.js"></script>
  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 {{>layout/footer}}
