--- a/src/main/resources/templates/kidsmap.html
+++ b/src/main/resources/templates/kidsmap.html
@@ -1,8 +1,8 @@
 {{>layout/header}}
 <div class="selectdongnae">
     
-    <h3 style="text-align: center;">지역을 선택하세요</h3>
-    <form action="/search" method="post">
+    <h3 style="text-align: center;">원하는 동네를 입력하세요</h3>
+    <form action="/search" method="get">
         <input type="text" id="juso" name="juso" placeholder="00시 00구">
         <button id="inputbtn" type="submit">검색</button>
     </form>
@@ -46,7 +46,7 @@
     <!--메뉴창이 제일 위로 나오게 해야함
         지금 지도가 맨 위에 올라가있음!-->
 
-
+<!-- 테이블 css? js에서 검색결과들 위치마커로 지도에 띄워야함 -->
 <table class="tabel table-hover">
     <thead>
         <tr>
@@ -68,5 +68,6 @@
         {{/kidsmap}}
       </tbody>
 </table>
+
 
 {{>layout/footer}}
